# srcds-dev-server

./: Cargo.toml  build.js
src/: config.rs  fastdl.rs  main.rs  srcds.rs  steamcmd.rs  template.rs
template-examples/: README.md
template-examples/addons/sourcemod/configs/: databases.cfg.impl
template-examples/cfg/: server.cfg.tmpl
