[package]
name = "srcds-dev-server"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1.7.2"
rand = "0.8.3"
rcon = "0.4.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["full"] }
toml = "0.5"
watchexec = "1.16.0"
